3.3/files/cache-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deploy
  namespace: app
  labels:
    app: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
          name: http-port
        - containerPort: 443
          name: https-port
