3.3/files/frontend-np.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-nothing-front
  namespace: app
spec:
  selector: app == 'frontend'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Deny
  egress:
    - action: Allow
